flux/lab-cluster/policies/hubble-relay-peer-allow.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hubble-relay-to-cilium-peer
  namespace: kube-system
spec:
  description: "Allow Hubble Relay to connect to Hubble peer endpoints on TCP/443 and TCP/4244."
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: kube-system
      k8s:k8s-app: hubble-relay
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: cilium
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "4244"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: hubble-peer
            namespace: kube-system
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
