flux/lab-cluster/policies/hubble-ui-access.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hubble-ui-ingress
  namespace: kube-system
spec:
  description: "Allow access to Hubble UI from ingress and node/host paths."
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: kube-system
      k8s:k8s-app: hubble-ui
  ingress:
    - fromEntities:
        - ingress
        - host
        - remote-node
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: hubble-relay
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "4245"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hubble-relay-from-ui
  namespace: kube-system
spec:
  description: "Allow Hubble UI to call Hubble Relay."
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: kube-system
      k8s:k8s-app: hubble-relay
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: hubble-ui
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:app: hubble-observer
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "4245"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hubble-observer-to-relay
  namespace: kube-system
spec:
  description: "Allow Hubble observer to send flows to Hubble Relay."
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: kube-system
      k8s:app: hubble-observer
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: hubble-relay
      toPorts:
        - ports:
            - port: "4245"
              protocol: TCP
