flux/lab-cluster/policies/monitoring-signoz-otel-to-signoz-allow.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-signoz-otel-to-signoz
  namespace: monitoring
spec:
  description: "Allow SigNoz OTEL collector to connect to SigNoz API on 4320."
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/instance: monitoring-signoz
      k8s:app.kubernetes.io/component: otel-collector
      k8s:app.kubernetes.io/name: signoz
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/instance: monitoring-signoz
            k8s:app.kubernetes.io/component: signoz
            k8s:app.kubernetes.io/name: signoz
      toPorts:
        - ports:
            - port: "4320"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-signoz-ingress-from-signoz-otel
  namespace: monitoring
spec:
  description: "Allow SigNoz API to accept traffic from SigNoz OTEL collector on 4320."
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/instance: monitoring-signoz
      k8s:app.kubernetes.io/component: signoz
      k8s:app.kubernetes.io/name: signoz
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/instance: monitoring-signoz
            k8s:app.kubernetes.io/component: otel-collector
            k8s:app.kubernetes.io/name: signoz
      toPorts:
        - ports:
            - port: "4320"
              protocol: TCP
